--- a/POC.ipynb
+++ b/POC.ipynb
@@ -145,7 +145,7 @@
         "steps=1\n",
         "clustering_eval_function = lambda cluster_labels, tags: eval_massive_cluster(cluster_labels, tags, steps, epochs)\n",
         "\n",
-        "dataset = load_dataset(VALIDATION_DATASET.keys())\n",
+        "dataset_loader = load_dataset(VALIDATION_DATASET.keys())\n",
         "\n",
         "wandb.login()"
       ]
@@ -439,7 +439,7 @@
         "from properties import MODELS_ENUM, PREPROCESSORS, ALGORITHM, GROUPER_FUNCTIONS\n",
         "\n",
         "DEFAULT_PARAMS = {\n",
-        "      \"dataset\": dataset,\n",
+        "      \"dataset\": dataset_loader,\n",
         "      \"evaluation_function\": clustering_eval_function,\n",
         "      \"show\": True,\n",
         "      \"device\": device\n",
@@ -473,9 +473,9 @@
         "  grouper_function = GROUPER_FUNCTIONS[exp_definition[\"grouper_function\"]](algorithm)\n",
         "  params[\"grouper_function\"] = grouper_function\n",
         "  params[\"name\"] = exp_definition[\"name\"]\n",
+        "  params[\"dataset\"] = dataset_loader()\n",
         "\n",
         "  run = wandb.init(project=\"ort-tesis\",group=exp_definition['name'],config=exp_definition, entity=\"hortensias\")\n",
-        "\n",
         "  result = experiment(**params)\n",
         "  print(result._asdict())\n",
         "  run.log({\n",
