--- a/POC.ipynb
+++ b/POC.ipynb
@@ -118,10 +118,8 @@
         "import torch\n",
         "from sklearn.cluster import AgglomerativeClustering\n",
         "import warnings\n",
-        "from models.resnet18 import get_model as get_resnet18\n",
         "from preprocessing.transforms import BASELINE\n",
         "from clustering.metrics import eval_massive_cluster\n",
-        "from clustering.model import clustering_function\n",
         "from experiment_framework import experiment\n",
         "from validation import VALIDATION_DATASET\n",
         "from utils import load_dataset\n",
@@ -152,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -181,15 +179,144 @@
       },
       "outputs": [
         {
-          "ename": "KeyError",
-          "evalue": "'YOLO_BASELINE'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[6], line 33\u001b[0m\n\u001b[1;32m     31\u001b[0m params \u001b[38;5;241m=\u001b[39m DEFAULT_PARAMS\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m     32\u001b[0m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m MODELS_ENUM[exp_definition[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m]](device)\n\u001b[0;32m---> 33\u001b[0m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpreprocessing\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mPREPROCESSORS\u001b[49m\u001b[43m[\u001b[49m\u001b[43mexp_definition\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpreprocessing\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     34\u001b[0m algorithm \u001b[38;5;241m=\u001b[39m ALGORITHM[exp_definition[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malgorithm\u001b[39m\u001b[38;5;124m\"\u001b[39m]](\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mexp_definition[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparams\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     35\u001b[0m grouper_function \u001b[38;5;241m=\u001b[39m GROUPER_FUNCTIONS[exp_definition[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrouper_function\u001b[39m\u001b[38;5;124m\"\u001b[39m]](algorithm)\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'YOLO_BASELINE'"
+          "data": {
+            "text/html": [
+              "wandb version 0.16.2 is available!  To upgrade, please run:\n",
+              " $ pip install wandb --upgrade"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "Tracking run with wandb version 0.16.1"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "Run data is saved locally in <code>/Users/mmandirola/tesis/wandb/run-20240122_214553-oqm03non</code>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "Syncing run <strong><a href='https://wandb.ai/hortensias/ort-tesis/runs/oqm03non' target=\"_blank\">dauntless-sky-73</a></strong> to <a href='https://wandb.ai/hortensias/ort-tesis' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              " View project at <a href='https://wandb.ai/hortensias/ort-tesis' target=\"_blank\">https://wandb.ai/hortensias/ort-tesis</a>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              " View run at <a href='https://wandb.ai/hortensias/ort-tesis/runs/oqm03non' target=\"_blank\">https://wandb.ai/hortensias/ort-tesis/runs/oqm03non</a>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Experiment name: SimilarityClustering Airbnb.mp4\n",
+            "Precision - Mean: 0.94, std: 0.0000000000\n",
+            "Recall - Mean: 0.49, std: 0.0000000000\n",
+            "F1-Score - Mean: 0.61, std: 0.0000000000\n",
+            "Accuracy - Mean: 0.49, std: 0.0000000000\n",
+            "\n",
+            "Experiment name: SimilarityClustering AVG\n",
+            "Precision - Mean: 0.94, std: 0.0000000000\n",
+            "Recall - Mean: 0.49, std: 0.0000000000\n",
+            "F1-Score - Mean: 0.61, std: 0.0000000000\n",
+            "Accuracy - Mean: 0.49, std: 0.0000000000\n",
+            "{'precision': MetricsResults(mean=0.9399112694007534, std=0.0), 'recall': MetricsResults(mean=0.4905660377358491, std=0.0), 'f1': MetricsResults(mean=0.6145718925642055, std=0.0), 'accuracy': MetricsResults(mean=0.4905660377358491, std=0.0)}\n"
           ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "wandb: WARNING Source type is set to 'repo' but some required information is missing from the environment. A job will not be created from this run. See https://docs.wandb.ai/guides/launch/create-job\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+              "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+              "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+              "    </style>\n",
+              "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>Accuracy</td><td>▁</td></tr><tr><td>Accuracy_STD</td><td>▁</td></tr><tr><td>F1</td><td>▁</td></tr><tr><td>F1_STD</td><td>▁</td></tr><tr><td>Precision</td><td>▁</td></tr><tr><td>Precision_STD</td><td>▁</td></tr><tr><td>Recall</td><td>▁</td></tr><tr><td>Recall_STD</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>Accuracy</td><td>0.49057</td></tr><tr><td>Accuracy_STD</td><td>0.0</td></tr><tr><td>F1</td><td>0.61457</td></tr><tr><td>F1_STD</td><td>0.0</td></tr><tr><td>Precision</td><td>0.93991</td></tr><tr><td>Precision_STD</td><td>0.0</td></tr><tr><td>Recall</td><td>0.49057</td></tr><tr><td>Recall_STD</td><td>0.0</td></tr></table><br/></div></div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              " View run <strong style=\"color:#cdcd00\">dauntless-sky-73</strong> at: <a href='https://wandb.ai/hortensias/ort-tesis/runs/oqm03non' target=\"_blank\">https://wandb.ai/hortensias/ort-tesis/runs/oqm03non</a><br/>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "Find logs at: <code>./wandb/run-20240122_214553-oqm03non/logs</code>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -206,25 +333,35 @@
         "EXPERIMENT_DEFINITIONS= [\n",
         "    {\n",
         "        'name': 'ResnetAglomerative',\n",
-        "        'model': \"YOLOV8\",\n",
+        "        'model': {\n",
+        "          'name': 'YOLOV8',\n",
+        "          'params': ['/Users/mmandirola/tesis/best.pt']\n",
+        "        },\n",
         "        'algorithm': \"AGGLOMERATIVE\",\n",
-        "        'params': {\"n_clusters\": None, \"distance_threshold\": 50},\n",
+        "        'params': {\"n_clusters\": None, \"distance_threshold\": 100},\n",
         "        'grouper_function': \"CLUSTERING_FUNCTION\",\n",
         "        'preprocessing': \"YOLO_BASELINE\",\n",
         "    },\n",
-        "    # {\n",
-        "    #     'name': 'SimilarityClustering',\n",
-        "    #     'model': \"RESNET18\",\n",
-        "    #     'algorithm': \"SIMILARITY\",\n",
-        "    #     'params': {\"threshold\": 0.999},\n",
-        "    #     'grouper_function': \"CLUSTERING_FUNCTION\",\n",
-        "    #     'preprocessing': \"BASELINE\",\n",
-        "    # }\n",
+        "    {\n",
+        "        'name': 'SimilarityClustering',\n",
+        "        'model': {\n",
+        "          'name': \"RESNET18\",\n",
+        "          'params': [device]\n",
+        "        },\n",
+        "        'algorithm': \"SIMILARITY\",\n",
+        "        'params': {\"threshold\": 0.999},\n",
+        "        'grouper_function': \"CLUSTERING_FUNCTION\",\n",
+        "        'preprocessing': \"BASELINE\",\n",
+        "    }\n",
         "]\n",
         "\n",
         "for exp_definition in EXPERIMENT_DEFINITIONS:\n",
         "  params = DEFAULT_PARAMS.copy()\n",
-        "  params[\"model\"] = MODELS_ENUM[exp_definition[\"model\"]](device)\n",
+        "  model_definition = MODELS_ENUM[exp_definition[\"model\"][\"name\"]]\n",
+        "  model_params = exp_definition[\"model\"][\"params\"]\n",
+        "  model = model_definition.get_instance(*model_params)\n",
+        "  params[\"model\"] = model\n",
+        "  \n",
         "  params[\"preprocessing\"] = PREPROCESSORS[exp_definition[\"preprocessing\"]]\n",
         "  algorithm = ALGORITHM[exp_definition[\"algorithm\"]](**exp_definition[\"params\"])\n",
         "  grouper_function = GROUPER_FUNCTIONS[exp_definition[\"grouper_function\"]](algorithm)\n",
